[package]
name = "ddq"
version = "0.1.0"
edition = "2018"
authors = ["Jin Xue <csjinxue@outlook.com>"]
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.7.0", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["net"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
log = "0.4"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8.0"
env_logger = "0.8.0"
async-raft = "0.6.1"
anyhow = "1.0"
bincode = "1.3.3"
tracing = "0.1"
tracing-subscriber = "0.2"

[lib]
crate-type = ["staticlib", "rlib"]